Feature : Create Sign In User Logic
Create Sign In User Logic With CreateUserForm to study django

참고 : #

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
     <title>Hello Django</title>
 </head>
 <body>
-{{welcome_msg}}
+    {{ user }} <br />
+    {% for i in params %} {{i}}<br />
+    {% endfor %}
+    <a href="{% url 'register' %}">회원가입</a>
 </body>
 </html>
